# databricks-ai-playground

./: .databricks-ai-dev-kit.yaml  .databrickscfg  .gitignore  .installed-skills  .mcp.json  CONTRIBUTING.md  DATABRICKS-CLI.md  DATABRICKS.md  Databricks-cli.md  NOTICE.txt  README.md  RELEASE.md  SECURITY.md  ai_playground.sql  ai_playground_prompts.txt  databricks.yml  install.ps1  install.sh
.claude/: settings.json
.claude-plugin/: check_update.sh  marketplace.json  setup.sh
.test/references/: trace-eval.md
databricks-builder-app/: README.md  alembic.ini  app.yaml_backup  databricks.yml  pyproject.toml  requirements.txt
databricks-builder-app/alembic/: env.py
databricks-builder-app/client/: index.html  package-lock.json  package.json  vite.config.ts
databricks-builder-app/scripts/: deploy.sh  start_local.sh
databricks-dqx-app/: databricks.yml  pyproject.toml  requirements.txt
databricks-dqx-app/databricks_dqx_app/: app.py  helpers.py  main-sql.py  main.py  sample_notebook.ipynb
databricks-dqx-app/databricks_dqx_app/etl/: README.md
databricks-dqx-app/databricks_dqx_app/etl/explorations/: sample_exploration.ipynb
databricks-dqx-app/databricks_dqx_app/etl/transformations/: sample_trips.py  sample_trips_bd_databricks_project.py  sample_zones.py  sample_zones_bd_databricks_project.py
databricks-dqx-app/resources/: etl_pipeline_dqx_qc.yml  job_dqx_qc.yml  job_pipeline_dqx_qc.yml  lakeflow_pipeline_dqx_qc.yml
databricks-mcp-server/: setup.sh
databricks-skills/: install_genie_code_skills.py  install_skills.sh
databricks-tools-core/: README.md
notebooks/: databricks_ai.ipynb  databricks_spark.ipynb  uc_dqx.ipynb
(+19 files in other folders)
